--- a/index.html
+++ b/index.html
@@ -1,5 +1,226 @@
+
+<!DOCTYPE HTML>
 <html>
-<body>
-    <p>hey</p>
+<head>
+  <title>onHealth - </title>
+    <link rel="stylesheet" href="https://d2kfjaekmjmy1l.cloudfront.net/base-vjPwuA159YfoyQm2IH3ZcPX08.css" data-bundle="base" integrity="sha256-jPwuA159YfoyQm2IH3ZcPX08iKtwZPH5C4t4Ouoq/Ec&#x3D;" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://d2kfjaekmjmy1l.cloudfront.net/websites-vy0OTznrgJ1PxYDpVl0gRBHAG.css" data-bundle="websites" integrity="sha256-y0OTznrgJ1PxYDpVl0gRBHAGK4UIcQ3F6/cE4U3M7rc&#x3D;" crossorigin="anonymous">
+  <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta name="description" content="">
+<meta name="keywords" content="">
+
+<!-- Facebook -->
+<meta property="og:site_name" content="onHealth">
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:url" content="http://">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="onHealth - ">
+<meta name="twitter:description" content="">
+<meta name="twitter:image:src" content="">
+<meta name="twitter:domain" content="http://">
+<meta name="twitter:app:name:iphone" content="onHealth">
+<meta name="twitter:app:id:iphone" content="">
+<meta name="twitter:app:name:ipad" content="onHealth">
+<meta name="twitter:app:id:ipad" content="">
+
+
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Raleway:400,100,200,300,500,600,700,800,900" rel="stylesheet" type="text/css">
+
+<style type="text/css">
+    #public-landing-page .container {
+      font-family: 'Raleway', sans-serif !important;
+    }
+    #public-landing-page.template-1 .hero,
+    #public-landing-page.template-2 .hero,
+    #public-landing-page.template-3 .hero,
+    #public-landing-page.template-4 .hero,
+    #public-landing-page.template-7 .hero,
+    #public-landing-page .store-badge-white-text,
+    #public-landing-page.template-1color .hero,
+    #public-landing-page.template-2color .hero {
+      background: #FFEECB;
+    }
+    #public-landing-page.template-5 .hero h2,
+    #public-landing-page.template-6 .hero h1,
+    #public-landing-page .navbar .btn,
+    #public-landing-page .navbar.invert-navbar a,
+    #public-landing-page footer a,
+    #public-landing-page .benefit-header {
+      color: #FFEECB;
+    }
+    #public-landing-page .navbar.invert-navbar .btn.btn-primary,
+    #public-landing-page .navbar .navbar-collapse.in .btn.btn-primary,
+    #public-landing-page .navbar .navbar-toggle .icon-bar,
+    #public-landing-page .download-text {
+      color: saddlebrown;
+      background-color: #FFEECB;
+    }
+
+
+    #public-landing-page.template-1 .hero,
+    #public-landing-page.template-2 .hero,
+    #public-landing-page.template-4 .hero {
+      overflow: hidden;
+    }
+    #public-landing-page .hero .blurred-cover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 1px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+    }
+    #public-landing-page .hero .blurred-cover .darken {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 2px;
+    }
+
+</style>
+
+
+</head>
+<body><div id="skit-controller"><div id="public-landing-page"
+  class="
+    template-1
+    full-screen
+    centered
+  ">
+
+  <section class="hero" style="padding: 0 0 0 0">
+    <div class="blurred-cover">
+      <div class="darken"></div>
+    </div>
+  <div class="container">
+    <nav class="navbar navbar-default
+  
+  
+  ">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="visible-xs"><a href="/websites/XDih19RvljE">Home Page</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+      <div class="row">
+        <div class="col-sm-5 col-xs-12 text-center">
+              <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2F_LiXjjoTWdQNXQIxz40duxOa0LrROkP6KgcpVCHHtGR65kuy1vqHhpXhNnvOYwssYXZZmm6PVWvehH4os9v5oTmZR3UEQA&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of onHealth">
+        </div>
+        <div class="item">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2FrQ888SZLAaPk2dhhxvpZLxwVGU7D7uGxpi6h7Gwz7Dm1WUNXSOsKfh-yFBlGmVOak2A4Ul3On3cM0BI_P_3xZmz5myEQ4g&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of onHealth">
+        </div>
+        <div class="item">
+          <img src="https://launchkit-io.imgix.net/devices/iPhone6White.png?w&#x3D;750&amp;h&#x3D;1334&amp;mark&#x3D;https%3A%2F%2Flh3.googleusercontent.com%2FgEN2xw6v5og7s4RunAlL9bUQUAZrk0M7NvfaiCnj_m2F7Y5xiq3OZrdN5brQQHAzuJjDcCqUZ0Zdt1bTUy24dcZf62mRjQ&amp;markh&#x3D;970&amp;markalign&#x3D;center%2Cmiddle" class="screenshot" alt="Screenshot of onHealth">
+        </div>
+    </div>
+  </div>
+        </div>
+        <div class="col-sm-7 col-xs-12">
+            <h1>  <img src="logo.png"></img>
+</h1>
+          <h2></h2>
+            <p style="color: #234ba5; font-weight: bold">A new startup focused on making healthcare data more accessible to all caretakers via a centralized database.<br><br>Launching with an app to help Alzhemier's patients.</p>
+          
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+  </div>
+</section>
+
+</div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+</div>
+  <script>
+    window.skit = (function() {
+      var objects = {};
+      var modules = {};
+      function define(resourcePath, deps, fn) {
+        modules[resourcePath] = {deps: deps, fn: fn};
+      }
+      function load(resourcePath) {
+        if (!(resourcePath in objects)) {
+          if (resourcePath in modules) {
+            var module = modules[resourcePath];
+            var args = [];
+            for (var i = 0; i < module.deps.length; i++) {
+              args.push(load(module.deps[i]));
+            }
+            objects[resourcePath] = module.fn.apply(window, args);
+          } else {
+            objects[resourcePath] = null;
+          }
+        }
+        return objects[resourcePath];
+      }
+      return {
+        define: define,
+        modules: modules,
+        env: {
+ "productionAPI": true,
+ "appEngineHost": "https://launchkit-images.appspot.com/",
+ "publicRoot": "public"
+},
+        load: load
+      };
+    })();
+  </script>
+    <script src="https://d2kfjaekmjmy1l.cloudfront.net/base-vpH0WEwjcj9XQbuL_OrNzJwjQ.js" data-bundle="base" integrity="sha256-pH0WEwjcj9XQbuL/OrNzJwjQwK19HPdyapXOj06TtNo&#x3D;" crossorigin="anonymous"></script>
+    <script src="https://d2kfjaekmjmy1l.cloudfront.net/websites-v5-zRRqqfyI-x0EUSY3Wb62Ya.js" data-bundle="websites" integrity="sha256-5+zRRqqfyI+x0EUSY3Wb62Ya0YP2kvFzmInpz+iy77k&#x3D;" crossorigin="anonymous"></script>
+  <script>
+    (function() {
+        var netproxy = skit.load("skit.platform.netproxy:js");
+          netproxy.__register__("lk", {
+ "name": "lk",
+ "csrfToken": "odiwGPycJkzwPZZY1lreww=="
+});
+
+      var ControllerKlass = skit.load("public.websites.__id__.WebsitePublic:js");
+      var controller = new ControllerKlass({
+ "__id__": "XDih19RvljE"
+});
+
+      var controllerProperties = {"website":{"facebookLink":"","domain":null,"disableLkBranding":false,"termsLink":"","appName":"onHealth","images":{"screenshots":{"iPhone":[{"url":"https://lh3.googleusercontent.com/_LiXjjoTWdQNXQIxz40duxOa0LrROkP6KgcpVCHHtGR65kuy1vqHhpXhNnvOYwssYXZZmm6PVWvehH4os9v5oTmZR3UEQA","imageId":"S2SJjOk3txo"},{"url":"https://lh3.googleusercontent.com/rQ888SZLAaPk2dhhxvpZLxwVGU7D7uGxpi6h7Gwz7Dm1WUNXSOsKfh-yFBlGmVOak2A4Ul3On3cM0BI_P_3xZmz5myEQ4g","imageId":"x-Ve_9Siom8"},{"url":"https://lh3.googleusercontent.com/gEN2xw6v5og7s4RunAlL9bUQUAZrk0M7NvfaiCnj_m2F7Y5xiq3OZrdN5brQQHAzuJjDcCqUZ0Zdt1bTUy24dcZf62mRjQ","imageId":"lZTk-MtBfZA"}]}},"blogLink":"","supportLink":"","longDescription":"","font":"Open Sans","playStoreId":"","isPro":null,"waitingListLink":"","primaryColor":"","keywords":"","googleAnalyticsId":"","itunesProviderToken":"","shortDescription":"","id":"XDih19RvljE","loginLink":"","privacyLink":"","itunesCampaignToken":"","author":"Zachary Espiritu","tagline":"","frameScreenshots":"white","customCss":null,"itunesId":"","pressLink":"","instagramLink":"","customLinkLabel":"","twitterLink":"","template":"1","mixpanelBadge":false,"customLink":"","homeUrl":"/websites/XDih19RvljE"}};
+      for (var k in controllerProperties) {
+        controller[k] = controllerProperties[k];
+      }
+
+      window.skit.controller = controller;
+      controller.recursiveLoad();
+      controller.recursiveReady();
+    })();
+  </script>
 </body>
-</html>
