Added files via upload

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
           <h2></h2>
             <p style="color: #234ba5; font-weight: bold">A new startup focused on making healthcare data more accessible to all caretakers via a centralized database.<br><br>Launching with an app to help Alzhemier's patients.</p>
           
+          <a href="#" class="app-store-badge" target="_blank">
+                <img src="https://d2kfjaekmjmy1l.cloudfront.net/images/websites/public/app-store-black-on-color@2x-vd3eb32e86e4d.png">
+              </a>
+          
 
         </div>
       </div>
